# behalter

./: .gitignore  .pylintrc  LICENSE  README.md  app.py  behalter.nix  behalter.py  behalter.service  migration.py  pyproject.toml  schema.sql  uwsgi.ini  wsgi.py
behalter/: __init__.py  database.py  db.py  models.py  util.py  views.py
behalter/static/: awesomplete.css  script.js  style.css
behalter/templates/: bookmark.html  index.html  results.html
static/: awesomplete.css  script.js  style.css  tagger.css
templates/: bookmark.html  index.html
