[tool.poetry]
description = "A simple bookmark manager"
authors = ["nunq <46054695+nunq@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.29"
pylint = "^3.1.0"
tzlocal = "^5.2"
requests = "^2.32.3"
pyuwsgi = "^2.0.26"
pyuseragents = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
